# aria2

./: .clang-format  .clang-tidy  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  Dockerfile  NEWS  README.rst  compile_commands.json  configure.ac  makerelease-osx.mk
.cache/clangd/index/: A2STR.cc.C7BD1E2C6795E8B2.idx  A2STR.h.36A4949FFF76BD3F.idx  ARC4Encryptor.h.FFB9626E1B68862D.idx  AbstractAuthResolver.cc.DA00232703B6A78D.idx  AbstractAuthResolver.h.75C4A064BF09E791.idx  AbstractBtMessage.cc.88FB1D04891D204A.idx  AbstractBtMessage.h.B9F49A3A85A330E0.idx  AbstractCommand.cc.0FF87030A83A9CC1.idx  AbstractCommand.h.6C663E5364D6F7D9.idx  AbstractDiskWriter.cc.2B1BF7E1FF68B8AC.idx  AbstractDiskWriter.h.CEF880ACB94F9EC3.idx  AbstractHttpServerResponseCommand.cc.06A630E5B915A379.idx  AbstractHttpServerResponseCommand.h.37C686F216392B47.idx  AbstractOptionHandler.cc.D499BD0629E3EC32.idx  AbstractOptionHandler.h.F1BFE20C48AA5403.idx  AbstractProxyRequestCommand.cc.0511FAB6B1262485.idx  AbstractProxyRequestCommand.h.C109555A2A87AAC9.idx  AbstractProxyResponseCommand.cc.38FD238D28E0B562.idx  AbstractProxyResponseCommand.h.4F3AEDF7272412A5.idx  AbstractSingleDiskAdaptor.cc.08176049A66F17B9.idx  AbstractSingleDiskAdaptor.h.975573E0D5445FF2.idx  ActivePeerConnectionCommand.cc.2FF50D782D649CFC.idx  ActivePeerConnectionCommand.h.5187CBD9F6F8A97D.idx  AdaptiveFileAllocationIterator.cc.F245D640DA7A1C85.idx  AdaptiveFileAllocationIterator.h.E492E590EDC891BC.idx  AdaptiveURISelector.cc.428F2BBB85E5016D.idx  AdaptiveURISelector.h.A6FEDF80BC9D8B95.idx  Adler32MessageDigestImpl.cc.5774A2722B468E66.idx  Adler32MessageDigestImpl.h.22F6A5DC0A72F723.idx  AnnounceList.cc.0E86252762CBE989.idx  AnnounceList.h.70A50BFA698FD455.idx  AnnounceTier.cc.1DE6BAC9FD8DEDA4.idx  AnnounceTier.h.86868D78B92324CC.idx  AppleTLSContext.cc.727BF7C53573437B.idx  (+851 more)
.github/workflows/: build.yml  coverage.yml  release.yml  static-analysis.yml  test-android.yml
.raw/: all_changes.patch  apply_bitfieldman.py  bitfieldman.patch  changes.patch  complete.patch
cmake/: config.h.cmake  libaria2.pc.in
docs/plans/: 2026-02-25-dev-environment-setup-design.md  2026-02-26-coverage-80-design.md  2026-02-26-coverage-80-plan.md  2026-02-26-integration-tests-design.md  2026-02-26-integration-tests-plan.md  2026-02-26-isocketcore-design.md  2026-02-26-isocketcore-implementation-plan.md  2026-02-26-test-implementation-plan.md  2026-02-26-test-reinforcement-design.md  2026-02-27-ci-bugfixes-contributing-design.md  2026-02-27-ci-bugfixes-contributing-plan.md  2026-02-27-cpp23-modernization-design.md  2026-02-27-cpp23-modernization-plan.md  2026-02-28-features-release-design.md  2026-02-28-features-release-plan.md
m4/: ax_cxx_compile_stdcxx.m4
scripts/: build-appimage.sh  coverage.sh
src/: AbstractAuthResolver.h  AbstractBtMessage.h  AbstractCommand.cc  AbstractCommand.h  AbstractDiskWriter.cc  AbstractDiskWriter.h  AbstractHttpServerResponseCommand.h  AbstractOptionHandler.h  AbstractProxyRequestCommand.cc  AbstractProxyRequestCommand.h  AbstractProxyResponseCommand.cc  AbstractProxyResponseCommand.h  AbstractSingleDiskAdaptor.cc  AbstractSingleDiskAdaptor.h  ActivePeerConnectionCommand.cc  ActivePeerConnectionCommand.h  AdaptiveFileAllocationIterator.cc  AdaptiveFileAllocationIterator.h  AdaptiveURISelector.cc  AdaptiveURISelector.h  Adler32MessageDigestImpl.h  AnonDiskWriterFactory.h  ApiCallbackDownloadEventListener.h  AppleMessageDigestImpl.cc  AppleTLSContext.cc  AppleTLSContext.h  AppleTLSSession.cc  AppleTLSSession.h  AsyncNameResolver.cc  AuthConfig.cc  AuthConfig.h  AuthConfigFactory.cc  AuthConfigFactory.h  AutoSaveCommand.h  BackupIPv4ConnectCommand.cc  BackupIPv4ConnectCommand.h  BencodeDiskWriter.h  BencodeDiskWriterFactory.h  BitfieldMan.cc  BitfieldMan.h  (+639 more)
test/: AbstractCommandTest.cc  AuthConfigFactoryTest.cc  BitfieldManTest.cc  BittorrentHelperTest.cc  BrotliDecodingStreamFilterTest.cc  BtAllowedFastMessageTest.cc  BtBitfieldMessageTest.cc  BtCancelMessageTest.cc  BtChokeMessageTest.cc  BtDependencyTest.cc  BtExtendedMessageTest.cc  BtHandshakeMessageTest.cc  BtHaveAllMessageTest.cc  BtHaveMessageTest.cc  BtHaveNoneMessageTest.cc  BtInterestedMessageTest.cc  BtNotInterestedMessageTest.cc  BtOrchestrationTest.cc  BtPeerIntegrationTest.cc  BtPieceMessageTest.cc  BtPortMessageTest.cc  BtRegistryTest.cc  BtRejectMessageTest.cc  BtRequestMessageTest.cc  BtSetupTest.cc  BtSuggestPieceMessageTest.cc  BtUnchokeMessageTest.cc  BtValidatorTest.cc  ChunkedDecodingStreamFilterTest.cc  CookieHelperTest.cc  DHTAnnouncePeerMessageTest.cc  DHTBucketTreeTest.cc  DHTCommandTest.cc  DHTConnectionImplTest.cc  DHTFindNodeMessageTest.cc  DHTGetPeersMessageTest.cc  DHTIDCloserTest.cc  DHTMessageDispatchTest.cc  DHTMessageFactoryImplTest.cc  DHTMessageTrackerEntryTest.cc  (+107 more)
test/e2e/: bt_tracker.py  create_torrent.py  ftp_server.py  http_server.py  proxy_server.py  run_all.sh  socks5_server.py  t_bandwidth.sh  t_bt_advanced.sh  t_bt_dht_pex.sh  t_bt_discovery.sh  t_bt_encryption.sh  t_bt_magnet.sh  t_bt_metadata.sh  t_bt_multifile.sh  t_bt_options.sh  t_bt_rpc_methods.sh  t_bt_seed_download.sh  t_bt_show_files.sh  t_checksum_algos.sh  t_cli_basic.sh  t_conditional_get_extended.sh  t_conf_file.sh  t_console_output.sh  t_disk_cache.sh  t_download_control.sh  t_file_allocation.sh  t_ftp_download.sh  t_ftp_options.sh  t_ftp_passive.sh  t_ftp_proxy.sh  t_ftp_resume.sh  t_hooks.sh  t_hooks_extended.sh  t_http2_download.sh  t_http_404.sh  t_http_advanced.sh  t_http_auth.sh  t_http_behavior.sh  t_http_checksum.sh  (+49 more)
test_outdir/: aria2_BufferedFileTest_testOpen  aria2_CookieStorageTest_testSaveNsFormat  aria2_FallocFileAllocationIteratorTest_testAllocate  aria2_GZipFileTest_testOpen  aria2_RequestGroupManTest_testLoadServerStat  aria2_RequestGroupManTest_testSaveServerStat__temp  aria2_ServerStatManTest_testLoad  aria2_ServerStatManTest_testSave  aria2_SessionSerializerTest_testSaveErrorDownload  aria2_SignatureTest_testSave  aria2_UtilTest2_testToStream
test_outdir/aria2_MultiDiskAdaptorTest_testWriteCache/: file1
(+4 files in other folders)
